Add TaskManagementHelperRepositoryImpl. Refactor all commands with TaskManagementHelperRepositoryImpl.